lessons/280/5-gateway-api-tls/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: order
