lessons/280/5-gateway-api-tls/0-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  annotations:
    cert-manager.io/cluster-issuer: http-01
spec:
  gatewayClassName: istio
  listeners:
  - name: api-http
    hostname: "*.example.com"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: api-https
    protocol: HTTPS
    port: 443
    hostname: catalog.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: catalog-example-com
    allowedRoutes:
      namespaces:
        from: All
