lessons/280/5-gateway-api-tls/3-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order
spec:
  parentRefs:
  - name: main
  hostnames: ["order.example.com"]
  rules:
  - backendRefs:
    - name: order
      port: 8080
